tests/test63.rael.exp
Error [tests/test63.rael:1:3]: Division by zero
| 7 / 0
|   ^
